netgen v1.1.9000 (Release data: ...):
===========
* added functions filterInstancesBy, filterInstancesByDimension and filterInstancesByEdgeWeightType
* last line of TSPlib export now containts EOF string

netgen v1.1 (Release data: 2015-05-19):
===========

* added rescaleNetwork
* network objects now store the distance matrix internally
* network objects now have name and comment field
* lower and upper bound are now optional for makeNetwork/makeClusteredNetwork
* added possibility to pass point matching or point matching algorithm to morphInstances
* getOptimalPointAssignment now has another parameter method (new method to
  solve the assigment to optimality)
* importFromTSPlibFormat and exportToTSPlibFormat for storing networks in the TSPlib format
* importFromFile and exportToFile for storing networks in proprietary format (similar to TSPlib format, but with additional information like cluster membership or arrival/request times)
* generate{Random,Clustered,Grid}Network now automatically generate a random name if none is provided
* there is no makeClusteredNetwork function anymore. Instead makeNetwork has an optional paramter membership

netgen v1.0 (Release date: 2015-02-03):
===========

* First submission to CRAN.